force-app/main/default/objects/POSProductsList__x/POSProductsList__x.object-meta.xml
<CustomObject>
    <description>POSProductsList</description>
    <externalDataSource>Point_of_Sales</externalDataSource>
    <externalName>POSProductsList</externalName>
    <label>POSProductsList</label>
    <pluralLabel>POSProductsList</pluralLabel>
</CustomObject>