force-app/main/default/objects/POSProductsList__x/fields/adjustment__c.field-meta.xml
<CustomField>
    <fullName>adjustment__c</fullName>
    <description>adjustment</description>
    <externalDeveloperName>adjustment</externalDeveloperName>
    <label>adjustment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>