force-app/main/default/objects/POSProductsList__x/fields/annualized_qty__c.field-meta.xml
<CustomField>
    <fullName>annualized_qty__c</fullName>
    <description>annualized_qty</description>
    <externalDeveloperName>annualized_qty</externalDeveloperName>
    <label>annualized_qty</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>