force-app/main/default/objects/POSProductsList__x/fields/annualized_sales__c.field-meta.xml
<CustomField>
    <fullName>annualized_sales__c</fullName>
    <description>annualized_sales</description>
    <externalDeveloperName>annualized_sales</externalDeveloperName>
    <label>annualized_sales</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>