force-app/main/default/objects/POSProductsList__x/fields/barcode__c.field-meta.xml
<CustomField>
    <fullName>barcode__c</fullName>
    <description>barcode</description>
    <externalDeveloperName>barcode</externalDeveloperName>
    <label>barcode</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>