force-app/main/default/objects/POSProductsList__x/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <description>category</description>
    <externalDeveloperName>category</externalDeveloperName>
    <label>category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>