force-app/main/default/objects/POSProductsList__x/fields/created_at__c.field-meta.xml
<CustomField>
    <fullName>created_at__c</fullName>
    <description>created_at</description>
    <externalDeveloperName>created_at</externalDeveloperName>
    <label>created_at</label>
    <length>20</length>
    <type>Text</type>
</CustomField>