force-app/main/default/objects/POSProductsList__x/fields/created_by__c.field-meta.xml
<CustomField>
    <fullName>created_by__c</fullName>
    <description>created_by</description>
    <externalDeveloperName>created_by</externalDeveloperName>
    <label>created_by</label>
    <length>30</length>
    <type>Text</type>
</CustomField>