force-app/main/default/objects/POSProductsList__x/fields/forecast_sales_three_months__c.field-meta.xml
<CustomField>
    <fullName>forecast_sales_three_months__c</fullName>
    <description>forecast_sales_three_months</description>
    <externalDeveloperName>forecast_sales_three_months</externalDeveloperName>
    <label>forecast_sales_three_months</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>