force-app/main/default/objects/POSProductsList__x/fields/inventory__c.field-meta.xml
<CustomField>
    <fullName>inventory__c</fullName>
    <description>inventory</description>
    <externalDeveloperName>inventory</externalDeveloperName>
    <label>inventory</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>