force-app/main/default/objects/POSProductsList__x/fields/item_name__c.field-meta.xml
<CustomField>
    <fullName>item_name__c</fullName>
    <description>item_name</description>
    <externalDeveloperName>item_name</externalDeveloperName>
    <label>item_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>