force-app/main/default/objects/POSProductsList__x/fields/last_cost__c.field-meta.xml
<CustomField>
    <fullName>last_cost__c</fullName>
    <description>last_cost</description>
    <externalDeveloperName>last_cost</externalDeveloperName>
    <label>last_cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>