force-app/main/default/objects/POSProductsList__x/fields/last_edited_by__c.field-meta.xml
<CustomField>
    <fullName>last_edited_by__c</fullName>
    <description>last_edited_by</description>
    <externalDeveloperName>last_edited_by</externalDeveloperName>
    <label>last_edited_by</label>
    <length>20</length>
    <type>Text</type>
</CustomField>