force-app/main/default/objects/POSProductsList__x/fields/most_recent_vendor__c.field-meta.xml
<CustomField>
    <fullName>most_recent_vendor__c</fullName>
    <description>most_recent_vendor</description>
    <externalDeveloperName>most_recent_vendor</externalDeveloperName>
    <label>most_recent_vendor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>