force-app/main/default/objects/POSProductsList__x/fields/need_to_order_for_next_three_months__c.field-meta.xml
<CustomField>
    <fullName>need_to_order_for_next_three_months__c</fullName>
    <description>need_to_order_for_next_three_months</description>
    <externalDeveloperName>need_to_order_for_next_three_months</externalDeveloperName>
    <label>need_to_order_for_next_three_months</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>