force-app/main/default/objects/POSProductsList__x/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <description>order</description>
    <externalDeveloperName>order</externalDeveloperName>
    <label>order</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>