force-app/main/default/objects/POSProductsList__x/fields/pomo_price__c.field-meta.xml
<CustomField>
    <fullName>pomo_price__c</fullName>
    <description>pomo_price</description>
    <externalDeveloperName>pomo_price</externalDeveloperName>
    <label>pomo_price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>