force-app/main/default/objects/POSProductsList__x/fields/retail_price__c.field-meta.xml
<CustomField>
    <fullName>retail_price__c</fullName>
    <description>retail_price</description>
    <externalDeveloperName>retail_price</externalDeveloperName>
    <label>retail_price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>