force-app/main/default/objects/POSProductsList__x/fields/sales__c.field-meta.xml
<CustomField>
    <fullName>sales__c</fullName>
    <description>sales</description>
    <externalDeveloperName>sales</externalDeveloperName>
    <label>sales</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>