force-app/main/default/objects/POSProductsList__x/fields/unit__c.field-meta.xml
<CustomField>
    <fullName>unit__c</fullName>
    <description>unit</description>
    <externalDeveloperName>unit</externalDeveloperName>
    <label>unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>