force-app/main/default/objects/POSProductsList__x/fields/updated_at__c.field-meta.xml
<CustomField>
    <fullName>updated_at__c</fullName>
    <description>updated_at</description>
    <externalDeveloperName>updated_at</externalDeveloperName>
    <label>updated_at</label>
    <length>20</length>
    <type>Text</type>
</CustomField>