force-app/main/default/objects/POSProductsList__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>category__c</columns>
    <columns>item_name__c</columns>
    <columns>status__c</columns>
    <columns>unit__c</columns>
    <columns>retail_price__c</columns>
    <columns>pomo_price__c</columns>
    <columns>inventory__c</columns>
    <columns>sales__c</columns>
    <columns>adjustment__c</columns>
    <columns>created_at__c</columns>
    <columns>DisplayUrl</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>